fix loading wrong post bug and z-index issues

--- a/public/assets/styles/components/nav.less
+++ b/public/assets/styles/components/nav.less
@@ -4,7 +4,7 @@ nav#nav-bar {
     left: 0;
     width: 100%;
     .set-responsively(height, nav-bar-height);
-    z-index: 1000;
+    z-index: 1100;
     overflow-y: visible;
     background: linear-gradient(to bottom, @primary-2, @primary-0);
 
