--- a/public/assets/styles/core.less
+++ b/public/assets/styles/core.less
@@ -110,7 +110,7 @@ input, textarea {
         > div.frame-column {
           position: absolute;
           overflow: hidden;
-          z-index: 700;
+          z-index: 1000;
 
           // hide column left offscreen
           left: -@frame-column-width-xs;
